Guacamole container added.

--- a/.env.example
+++ b/.env.example
@@ -1,13 +1,14 @@
 ##### PORTS
 
 DOZZLE_PORT=
+GUACAMOLE_PORT=
 HEIMDALL_PORT=
 HEIMDALL_LOCAL_PORT=
-NETDATA_PORT=
 MYOWNSITE_MARIADB_PORT=
 MYOWNSITE_WORDPRESS_PORT=
 MYOWNSITE_WORDPRESS_SSL_PORT=
 MYOWNSITE_PHPMYADMIN=
+NETDATA_PORT=
 NEXTCLOUD=
 NEXTCLOUDMARIADB=
 PORTAINER_PORT=
