--- a/docker-compose-traefik2-all.yml
+++ b/docker-compose-traefik2-all.yml
@@ -48,19 +48,21 @@ services:
       - --providers.file.directory=/rules # Load dynamic configuration from one or more .toml or .yml files in a directory.
       - --providers.file.watch=true # Only works on top level files in the rules folder
       # LetsEncrypt HTTP Challenge (enable access on port 80)
-#      - --certificatesresolvers.letsencrypt.acme.httpchallenge=true
-#      - --certificatesresolvers.letsencrypt.acme.httpchallenge.entrypoint=web
-#      - --certificatesresolvers.letsencrypt.acme.storage=/letsencrypt/acme.httpchallenge.letsencrypt.json # File must have chmod 600
+      - --certificatesresolvers.httpchallenge-letsencrypt.acme.httpchallenge=true
+      - --certificatesresolvers.httpchallenge-letsencrypt.acme.httpchallenge.entrypoint=web
+      - --certificatesresolvers.httpchallenge-letsencrypt.acme.storage=/letsencrypt/acme.httpchallenge.letsencrypt.json # File must have chmod 600
+      - --certificatesresolvers.httpchallenge-letsencrypt.acme.email=$CLOUDFLARE_EMAIL
       # LetsEncrypt TLS Challenge (might need comment all references to port 80 and entrypoint.web)
-#      - --certificatesresolvers.letsencrypt.acme.tlschallenge=true
+#      - --certificatesresolvers.tlschallenge-letsencrypt.acme.tlschallenge=true
       # LetsEncrypt DNS Challenge (add environment variables and ensure tls.domain labels are in place)
-      - --certificatesResolvers.letsencrypt.acme.dnsChallenge.provider=cloudflare
-      - --certificatesResolvers.letsencrypt.acme.dnsChallenge.delayBeforeCheck=5 # Seconds
-      - --certificatesResolvers.letsencrypt.acme.dnsChallenge.resolvers=1.1.1.1:53,1.0.0.1:53
-      - --certificatesresolvers.letsencrypt.acme.storage=/letsencrypt/acme.dnschallenge.cloudflare.json # File must have chmod 600
+      - --certificatesResolvers.dnschallenge-cloudflare.acme.dnsChallenge.provider=cloudflare
+      - --certificatesResolvers.dnschallenge-cloudflare.acme.dnsChallenge.delayBeforeCheck=5 # Seconds
+      - --certificatesResolvers.dnschallenge-cloudflare.acme.dnsChallenge.resolvers=1.1.1.1:53,1.0.0.1:53
+      - --certificatesresolvers.dnschallenge-cloudflare.acme.storage=/letsencrypt/acme.dnschallenge.cloudflare.json # File must have chmod 600
+      - --certificatesresolvers.dnschallenge-cloudflare.acme.email=$CLOUDFLARE_EMAIL
       # LetsEncrypt General Config
 #      - --certificatesresolvers.letsencrypt.acme.caserver=https://acme-staging-v02.api.letsencrypt.org/directory # Only for testing
-      - --certificatesresolvers.letsencrypt.acme.email=$CLOUDFLARE_EMAIL
+#      - --certificatesresolvers.letsencrypt.acme.email=$CLOUDFLARE_EMAIL # Only if noy defined above on each resolver
 #      - --certificatesresolvers.letsencrypt.acme.storage=/letsencrypt/acme.json # Ensure no other storage is active on challenges. File must have chmod 600
     volumes:
       - "/var/run/docker.sock:/var/run/docker.sock:ro"
@@ -82,7 +84,7 @@ services:
       - "traefik.http.routers.traefik-rtr.rule=Host(`traefik.$DOMAINNAME`)"
       - "traefik.http.routers.traefik-rtr.entrypoints=websecure"
 #      - "traefik.http.routers.traefik-rtr.tls=true"
-      - "traefik.http.routers.traefik-rtr.tls.certresolver=letsencrypt"
+      - "traefik.http.routers.traefik-rtr.tls.certresolver=dnschallenge-cloudflare"
       # Middleware
       - "traefik.http.routers.traefik-rtr.middlewares=chain-oauth@file"
       # Service
@@ -133,7 +135,7 @@ services:
       - "traefik.http.routers.oauth-rtr.rule=Host(`oauth.$DOMAINNAME`)"
       - "traefik.http.routers.oauth-rtr.entrypoints=websecure"
 #      - "traefik.http.routers.oauth-rtr.tls=true"
-      - "traefik.http.routers.oauth-rtr.tls.certresolver=letsencrypt"
+      - "traefik.http.routers.oauth-rtr.tls.certresolver=dnschallenge-cloudflare"
       # Middleware
       - "traefik.http.routers.oauth-rtr.middlewares=chain-oauth@file"
       # Service
@@ -224,7 +226,7 @@ services:
       - "traefik.http.routers.dozzle-rtr.rule=Host(`dozzle.$DOMAINNAME`)"
       - "traefik.http.routers.dozzle-rtr.entrypoints=websecure"
 #      - "traefik.http.routers.dozzle-rtr.tls=true"
-      - "traefik.http.routers.dozzle-rtr.tls.certresolver=letsencrypt"
+      - "traefik.http.routers.dozzle-rtr.tls.certresolver=dnschallenge-cloudflare"
       # Middleware
       - "traefik.http.routers.dozzle-rtr.middlewares=chain-oauth@file"
       # Service
@@ -257,7 +259,7 @@ services:
       - "traefik.http.routers.portainer-rtr.rule=Host(`portainer.$DOMAINNAME`)"
       - "traefik.http.routers.portainer-rtr.entrypoints=websecure"
 #      - "traefik.http.routers.portainer-rtr.tls=true"
-      - "traefik.http.routers.portainer-rtr.tls.certresolver=letsencrypt"
+      - "traefik.http.routers.portainer-rtr.tls.certresolver=dnschallenge-cloudflare"
       # Middleware
       - "traefik.http.routers.portainer-rtr.middlewares=chain-oauth@file"
       # Service
@@ -291,7 +293,7 @@ services:
       - "traefik.http.routers.netdata-rtr.rule=Host(`netdata.$DOMAINNAME`)"
       - "traefik.http.routers.netdata-rtr.entrypoints=websecure"
 #      - "traefik.http.routers.netdata-rtr.tls=true"
-      - "traefik.http.routers.netdata-rtr.tls.certresolver=letsencrypt"
+      - "traefik.http.routers.netdata-rtr.tls.certresolver=dnschallenge-cloudflare"
       # Middleware
       - "traefik.http.routers.netdata-rtr.middlewares=chain-oauth@file"
       # Service
@@ -377,7 +379,7 @@ services:
       - "traefik.http.routers.heimdall-rtr.rule=Host(`heimdall.$DOMAINNAME`)"
       - "traefik.http.routers.heimdall-rtr.entrypoints=websecure"
 #      - "traefik.http.routers.heimdall-rtr.tls=true"
-      - "traefik.http.routers.heimdall-rtr.tls.certresolver=letsencrypt"
+      - "traefik.http.routers.heimdall-rtr.tls.certresolver=dnschallenge-cloudflare"
       # Middleware
       - "traefik.http.routers.heimdall-rtr.middlewares=chain-oauth@file"
       # Service
@@ -432,7 +434,7 @@ services:
       - "traefik.http.routers.zoneminder_home-rtr.rule=Host(`zoneminderhome.$DOMAINNAME`)"
       - "traefik.http.routers.zoneminder_home-rtr.entrypoints=websecure"
 #      - "traefik.http.routers.zoneminder_home-rtr.tls=true"
-      - "traefik.http.routers.zoneminder_home-rtr.tls.certresolver=letsencrypt"
+      - "traefik.http.routers.zoneminder_home-rtr.tls.certresolver=dnschallenge-cloudflare"
       # Middleware
       - "traefik.http.routers.zoneminder_home-rtr.middlewares=chain-zoneminder@file"
       # Service
@@ -491,7 +493,7 @@ services:
       - "traefik.http.routers.nextcloud_home-rtr.rule=Host(`nextcloudhome.$DOMAINNAME`)"
       - "traefik.http.routers.nextcloud_home-rtr.entrypoints=websecure"
 #      - "traefik.http.routers.nextcloud_home-rtr.tls=true"
-      - "traefik.http.routers.nextcloud_home-rtr.tls.certresolver=letsencrypt"
+      - "traefik.http.routers.nextcloud_home-rtr.tls.certresolver=dnschallenge-cloudflare"
       # Middleware
       - "traefik.http.routers.nextcloud_home-rtr.middlewares=chain-no-auth@file"
       # Service
@@ -559,7 +561,7 @@ services:
       - "traefik.http.routers.blog_wordpress-rtr.rule=Host(`$DOMAINNAME_BLOG`,`www.$DOMAINNAME_BLOG`)"
       - "traefik.http.routers.blog_wordpress-rtr.entrypoints=websecure"
 #      - "traefik.http.routers.blog_wordpress-rtr.tls=true"
-      - "traefik.http.routers.blog_wordpress-rtr.tls.certresolver=letsencrypt"
+      - "traefik.http.routers.blog_wordpress-rtr.tls.certresolver=dnschallenge-cloudflare"
       # Middleware
       - "traefik.http.routers.blog_wordpress-rtr.middlewares=chain-no-auth@file"
       # Service
@@ -630,7 +632,7 @@ services:
     links:
       - myownsite_mariadb
     volumes:
-#      - $MYOWNSITEDIR/myownsite_wordpress/config/php.conf.uploads.ini:/usr/local/etc/php/conf.d/uploads.ini # Create file in advance
+      - $MYOWNSITEDIR/myownsite_wordpress/config/php.conf.uploads.ini:/usr/local/etc/php/conf.d/uploads.ini # Create file in advance
       - $MYOWNSITEDIR/myownsite_wordpress/wp-app:/var/www/html # Full wordpress project
     environment:
       WORDPRESS_DB_HOST: myownsite_mariadb
@@ -646,7 +648,7 @@ services:
       - "traefik.http.routers.myownsite_wordpress-rtr.rule=Host(`$DOMAINNAME`,`www.$DOMAINNAME`)"
       - "traefik.http.routers.myownsite_wordpress-rtr.entrypoints=websecure"
 #      - "traefik.http.routers.myownsite_wordpress-rtr.tls=true"
-      - "traefik.http.routers.myownsite_wordpress-rtr.tls.certresolver=letsencrypt"
+      - "traefik.http.routers.myownsite_wordpress-rtr.tls.certresolver=dnschallenge-cloudflare"
       # Middleware
       - "traefik.http.routers.myownsite_wordpress-rtr.middlewares=chain-no-auth@file"
       # Service
@@ -676,7 +678,7 @@ services:
       - "traefik.http.routers.guacamole-rtr.rule=Host(`guacamole.$DOMAINNAME`)"
       - "traefik.http.routers.guacamole-rtr.entrypoints=websecure"
 #      - "traefik.http.routers.guacamole-rtr.tls=true"
-      - "traefik.http.routers.guacamole-rtr.tls.certresolver=letsencrypt"
+      - "traefik.http.routers.guacamole-rtr.tls.certresolver=dnschallenge-cloudflare"
       # Middleware
       - "traefik.http.routers.guacamole-rtr.middlewares=chain-oauth@file"
       # Service
