Completing Nginx Proxy Manager docker-compose

--- a/.env.example
+++ b/.env.example
@@ -32,7 +32,16 @@ PUID=
 PGID=
 TZ=
 
+#################### TRAEFIK
+
 TRAEFIKPILOTKEY=
+
+#################### NGINX PROXY MANAGER
+
+NGINX_ROOT_PASSWORD=
+NGINX_MYSQL_DATABASE=
+NGINX_MYSQL_USER=
+NGINX_MYSQL_PASSWORD=
 
 #################### VPN
 
