Netdata failing to work

--- a/docker-compose-nginx-all.yml
+++ b/docker-compose-nginx-all.yml
@@ -256,26 +256,26 @@ services:
 ############################# MONITORING
 
   # Netdata - System monitoring
-  netdata:
-    container_name: netdata
-    image: netdata/netdata:latest
-    hostname: $HOST_NAME # set to fqdn of host
-    restart: unless-stopped
-    networks:
-      - ngproxy
-    ports:
-      - $NETDATA_PORT:19999
-    cap_add:
-      - SYS_PTRACE
-    security_opt:
-      - apparmor:unconfined
-      - no-new-privileges:true
-    volumes:
-      - /proc:/host/proc:ro
-      - /sys:/host/sys:ro
-      - /var/run/docker.sock:/var/run/docker.sock:ro
-    environment:
-      - PGID=$PGID
+#  netdata:
+#    container_name: netdata
+#    image: netdata/netdata:latest
+#    hostname: $HOST_NAME # set to fqdn of host
+#    restart: unless-stopped
+#    networks:
+#      - ngproxy
+#    ports:
+#      - $NETDATA_PORT:19999
+#    cap_add:
+#      - SYS_PTRACE
+#    security_opt:
+#      - apparmor:unconfined
+#      - no-new-privileges:true
+#    volumes:
+#      - /proc:/host/proc:ro
+#      - /sys:/host/sys:ro
+#      - /var/run/docker.sock:/var/run/docker.sock:ro
+#    environment:
+#      - PGID=$PGID
 
 ############################# NEXTCLOUD
 
