Added redis for nextcloud

--- a/.env.example
+++ b/.env.example
@@ -11,6 +11,7 @@ MYOWNSITE_PHPMYADMIN=
 NETDATA_PORT=
 NEXTCLOUD=
 NEXTCLOUDMARIADB=
+NEXTCLOUDREDIS=
 PORTAINER_PORT=
 STATPING_PORT=
 BLOG_MARIADB_PORT=
@@ -106,6 +107,7 @@ MARIADB_ROOT_PASSWORD_NEXTCLOUD=
 MARIADB_DATABASE_NEXTCLOUD=
 MARIADB_USER_NEXTCLOUD=
 MARIADB_PASSWORD_NEXTCLOUD=
+REDIS_PASSWORD_NEXTCLOUD=
 
 #################### LINKS
 
