Adding transmission to only proxy vpn

--- a/.env.example
+++ b/.env.example
@@ -19,6 +19,8 @@ BLOG_WORDPRESS_PORT=
 BLOG_WORDPRESS_SSL_PORT=
 TRANSMISSIONOPENVPN=
 TRANSMISSIONOPENVPNGUI=
+TRANSMISSIONOPENVPN_ONLYVPN=
+TRANSMISSIONOPENVPNGUI_ONLYVPN=
 WIRESHARK_PORT=
 ZONEMINDER_PORT=
 ZONEMINDER_WEBSOCKET_PORT=
@@ -50,6 +52,7 @@ OPENVPN_PROVIDER=
 OPENVPN_USERNAME=
 OPENVPN_PASSWORD=
 LOCAL_NETWORK=
+OPENVPN_CONFIG_FILES=
 
 #################### DIRECTORIES
 
