--- a/.env.example
+++ b/.env.example
@@ -66,6 +66,8 @@ ZMVIDEODIR="/zoneminder_video"
 NEXTCLOUDSTORAGEDIR="/nextcloud_storage"
 DOWNLOADS="/downloads"
 
+PLEX_MOVIES="/movies"
+
 #################### CLOUFDLARE
 
 CLOUDFLARE_EMAIL=
