--- a/docker-compose-nginx-all.yml
+++ b/docker-compose-nginx-all.yml
@@ -210,7 +210,7 @@ services:
       - PUID=$PUID
       - PGID=$PGID
       # Proxy
-      - WEBPROXY_ENABLED=true # Enable other containers to use the vpn
+      - WEBPROXY_ENABLED=false # Enable other containers to use the vpn
       - WEBPROXY_PORT=$TRANSMISSIONOPENVPN
       # Connections
       - TRANSMISSION_SCRAPE_PAUSED_TORRENTS_ENABLED=false
@@ -269,6 +269,10 @@ services:
       # Proxy
       - WEBPROXY_ENABLED=true # Enable other containers to use the vpn
       - WEBPROXY_PORT=8888 # $TRANSMISSIONOPENVPN_ONLYVPN
+    logging:
+      driver: json-file
+      options:
+        max-size: 10m
 
   # Guacamole
       # Create new user and delete default user
@@ -291,26 +295,26 @@ services:
 ############################# MONITORING
 
   # Netdata - System monitoring
-#  netdata:
-#    container_name: netdata
-#    image: netdata/netdata:latest
-#    hostname: $HOST_NAME # set to fqdn of host
-#    restart: unless-stopped
-#    networks:
-#      - ngproxy
-#    ports:
-#      - $NETDATA_PORT:19999
-#    cap_add:
-#      - SYS_PTRACE
-#    security_opt:
-#      - apparmor:unconfined
-#      - no-new-privileges:true
-#    volumes:
-#      - /proc:/host/proc:ro
-#      - /sys:/host/sys:ro
-#      - /var/run/docker.sock:/var/run/docker.sock:ro
-#    environment:
-#      - PGID=$PGID
+  netdata:
+    container_name: netdata
+    image: netdata/netdata:latest
+    hostname: $HOST_NAME # set to fqdn of host
+    restart: unless-stopped
+    networks:
+      - ngproxy
+    ports:
+      - $NETDATA_PORT:19999
+    cap_add:
+      - SYS_PTRACE
+    security_opt:
+      - apparmor:unconfined
+      - no-new-privileges:true
+    volumes:
+      - /proc:/host/proc:ro
+      - /sys:/host/sys:ro
+      - /var/run/docker.sock:/var/run/docker.sock:ro
+    environment:
+      - PGID=$PGID
 
 ############################# NEXTCLOUD
 
@@ -574,3 +578,23 @@ services:
     labels:
       # WatchTower
       - "com.centurylinklabs.watchtower.monitor-only=true"
+
+  # Plex
+  # <your-ip>:32400/web
+  plex:
+    image: linuxserver/plex
+    container_name: plex
+    restart: unless-stopped
+    #security_opt:
+    #  - no-new-privileges:true
+    network_mode: host
+    environment:
+      PUID: $PUID
+      PGID: $PGID
+      VERSION: docker
+      #UMASK: 022
+      #PLEX_CLAIM: #optional
+    volumes:
+      - $SERVICESDIR/plex/config:/config
+      - $PLEX_MOVIES:/movies
+    
