--- a/.env.example
+++ b/.env.example
@@ -66,7 +66,8 @@ ZMVIDEODIR="/zoneminder_video"
 NEXTCLOUDSTORAGEDIR="/nextcloud_storage"
 DOWNLOADS="/downloads"
 
-PLEX_MOVIES="/movies"
+PLEX_MOVIES_HDD_ONE="/movies_Hdd_One"
+PLEX_MOVIES_HDD_TWO="/movies_Hdd_Two"
 
 #################### CLOUFDLARE
 
